// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block calculation can calculate some blocks 1 1`] = `
BlockSet {
  "blocks": [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:1..800-0-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:1..800-0",
      "offsetPx": 0,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:801..1600-0",
      "offsetPx": 800,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 800,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 2 1`] = `
BlockSet {
  "blocks": [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:1..100-0-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 100,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1..100-0",
      "offsetPx": 0,
      "parentRegion": {
        "assemblyName": "test",
        "end": 100,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:1..100-0-rightpad",
      "offsetPx": 100,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgB:101..200-1",
      "offsetPx": 102,
      "parentRegion": {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgB",
        "start": 100,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 100,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgB:101..200-1-afterLastRegion",
      "offsetPx": 202,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 5 1`] = `
BlockSet {
  "blocks": [
    ContentBlock {
      "assemblyName": "test",
      "end": 5600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:4801..5600-0",
      "offsetPx": 4800,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 4800,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 6400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:5601..6400-0",
      "offsetPx": 5600,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 5600,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 6 1`] = `
BlockSet {
  "blocks": [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:1..200-0-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1..200-0",
      "offsetPx": 0,
      "parentRegion": {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 200,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:1..200-0-rightpad",
      "offsetPx": 200,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgB:1..800-1",
      "offsetPx": 202,
      "parentRegion": {
        "assemblyName": "test",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 7 1`] = `
BlockSet {
  "blocks": [
    ContentBlock {
      "assemblyName": "test",
      "end": 800,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgB:1..800-1",
      "offsetPx": 200,
      "parentRegion": {
        "assemblyName": "test",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 0,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 1000,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgB:801..1000-1",
      "offsetPx": 1000,
      "parentRegion": {
        "assemblyName": "test",
        "end": 1000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 800,
      "type": "ContentBlock",
      "widthPx": 200,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgB:801..1000-1-afterLastRegion",
      "offsetPx": 1200,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 8 1`] = `
BlockSet {
  "blocks": [
    ContentBlock {
      "assemblyName": "test",
      "end": 1600,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgB:801..1600-1",
      "offsetPx": 1000,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 800,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 2400,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgB:1601..2400-1",
      "offsetPx": 1800,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000000,
        "refName": "ctgB",
        "start": 0,
      },
      "refName": "ctgB",
      "regionNumber": 1,
      "reversed": undefined,
      "start": 1600,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 9 1`] = `
BlockSet {
  "blocks": [
    ContentBlock {
      "assemblyName": "test",
      "end": 3200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:1601..3200-0",
      "offsetPx": 800,
      "parentRegion": {
        "assemblyName": "test",
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 1600,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 4800,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:3201..4800-0",
      "offsetPx": 1600,
      "parentRegion": {
        "assemblyName": "test",
        "end": 50000,
        "refName": "ctgA",
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": undefined,
      "start": 3200,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`block calculation can calculate some blocks 10 1`] = `
[
  InterRegionPaddingBlock {
    "assemblyName": undefined,
    "end": undefined,
    "key": "{test}ctgA:101..140-0-beforeFirstRegion",
    "offsetPx": -800,
    "refName": undefined,
    "start": undefined,
    "type": "InterRegionPaddingBlock",
    "variant": "boundary",
    "widthPx": 800,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 140,
    "isLeftEndOfDisplayedRegion": true,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:101..140-0",
    "offsetPx": 0,
    "parentRegion": {
      "assemblyName": "test",
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": undefined,
    "start": 100,
    "type": "ContentBlock",
    "widthPx": 800,
  },
  ContentBlock {
    "assemblyName": "test",
    "end": 180,
    "isLeftEndOfDisplayedRegion": false,
    "isRightEndOfDisplayedRegion": false,
    "key": "{test}ctgA:141..180-0",
    "offsetPx": 800,
    "parentRegion": {
      "assemblyName": "test",
      "end": 200,
      "refName": "ctgA",
      "start": 100,
    },
    "refName": "ctgA",
    "regionNumber": 0,
    "reversed": undefined,
    "start": 140,
    "type": "ContentBlock",
    "widthPx": 800,
  },
]
`;

exports[`reverse block calculation 1 1`] = `
BlockSet {
  "blocks": [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:9201..10000[rev]-0-reversed-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:9201..10000[rev]-0-reversed",
      "offsetPx": 0,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 9200,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:8401..9200[rev]-0-reversed",
      "offsetPx": 800,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 8400,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions with elided region 1`] = `
BlockSet {
  "blocks": [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:1[rev]-0-reversed-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    ElidedBlock {
      "assemblyName": "test",
      "elidedBlockCount": 0,
      "end": 1,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:1[rev]-0-reversed",
      "offsetPx": 0,
      "parentRegion": {
        "assemblyName": "test",
        "end": 1,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 0,
      "type": "ElidedBlock",
      "widthPx": 1,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 10000,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:9201..10000[rev]-1-reversed",
      "offsetPx": 1,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 1,
      "reversed": true,
      "start": 9200,
      "type": "ContentBlock",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 9200,
      "isLeftEndOfDisplayedRegion": false,
      "isRightEndOfDisplayedRegion": false,
      "key": "{test}ctgA:8401..9200[rev]-1-reversed",
      "offsetPx": 801,
      "parentRegion": {
        "assemblyName": "test",
        "end": 10000,
        "refName": "ctgA",
        "reversed": true,
        "start": 0,
      },
      "refName": "ctgA",
      "regionNumber": 1,
      "reversed": true,
      "start": 8400,
      "type": "ContentBlock",
      "widthPx": 800,
    },
  ],
}
`;

exports[`reversed displayed regions without elided region 1`] = `
BlockSet {
  "blocks": [
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:101..200[rev]-0-reversed-beforeFirstRegion",
      "offsetPx": -800,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 200,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:101..200[rev]-0-reversed",
      "offsetPx": 0,
      "parentRegion": {
        "assemblyName": "test",
        "end": 200,
        "refName": "ctgA",
        "reversed": true,
        "start": 100,
      },
      "refName": "ctgA",
      "regionNumber": 0,
      "reversed": true,
      "start": 100,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:101..200[rev]-0-reversed-rightpad",
      "offsetPx": 100,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "widthPx": 2,
    },
    ContentBlock {
      "assemblyName": "test",
      "end": 600,
      "isLeftEndOfDisplayedRegion": true,
      "isRightEndOfDisplayedRegion": true,
      "key": "{test}ctgA:501..600[rev]-1-reversed",
      "offsetPx": 102,
      "parentRegion": {
        "assemblyName": "test",
        "end": 600,
        "refName": "ctgA",
        "reversed": true,
        "start": 500,
      },
      "refName": "ctgA",
      "regionNumber": 1,
      "reversed": true,
      "start": 500,
      "type": "ContentBlock",
      "widthPx": 100,
    },
    InterRegionPaddingBlock {
      "assemblyName": undefined,
      "end": undefined,
      "key": "{test}ctgA:501..600[rev]-1-reversed-afterLastRegion",
      "offsetPx": 202,
      "refName": undefined,
      "start": undefined,
      "type": "InterRegionPaddingBlock",
      "variant": "boundary",
      "widthPx": 800,
    },
  ],
}
`;
